<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Save to File</string>
    <string name="action_settings">Settings</string>
    <string name="EnterNames">Enter Names</string>
    <string name="View">View</string>
    <string name="Store">Store</string>
    <string name="Load">Load</string>
    <string name="Exit">Exit</string>
    <string name="title_activity_enter_name">EnterName</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_age">Age</string>
    <string name="Done">Done</string>
    <string name="title_activity_enter_filename">EnterFilename</string>
    <string name="hint_filename">please enter a filename</string>
    <string name="finish">finish</string>
    <string name="food_prompt">Choose your favourite food</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="title_activity_showfile">ShowfileActivity</string>
    <string name="title_activity_all_file">AllFileActivity</string>
    <string name="storeindatabase">storeindatabase</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="Viewdatabase">viewdatabase</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="Filter">Filter</string>
    <string name="filter_prompt1">Choose fruit:</string>
    <string name="filter_prompt2">Choose age from:</string>
    <string name="filter_prompt3">Choose age up to:</string>
    <string name="age_from">from</string>
    <string name="age_to">to</string>
    <string name="Show">Show</string>
    <string name="title_activity_show_filter">ShowFilterActivity</string>
    <string name="photo">take a picture</string>


</resources>
